[project]
name = "streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.6",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "streamlit",
]

[tool.uv.sources]
streamlit = { workspace = true }
